# museum-membership-finder

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md
crates/tessera-cli/: Cargo.toml
crates/tessera-cli/src/: main.rs
crates/tessera-core/: Cargo.toml
crates/tessera-core/src/: geo.rs  lib.rs  model.rs  rules.rs  solve.rs  zip.rs
crates/tessera-core/tests/: acceptance.rs  fixture_roundtrip.rs
crates/tessera-wasm/: Cargo.toml
crates/tessera-wasm/src/: lib.rs
data/: PROVENANCE.md  institutions.json  memberships.json  networks.json  zip-centroids-pnw.json
docs/: PLAN.md  SCRAPER_PLAN.md
web/: Cargo.toml  Trunk.toml  index.html  style.css
web/src/: data.rs  lib.rs
web/src/components/: app.rs  input.rs  map.rs  mod.rs  results.rs
xtask/: Cargo.toml
xtask/src/: add.rs  main.rs  scrape.rs  validate.rs
xtask/src/scrapers/: astc.rs  aza.rs  marp.rs  mod.rs  narm.rs  roam.rs
