[workspace]
resolver = "2"
members = [
    "crates/tessera-core",
    "crates/tessera-cli",
    "crates/tessera-wasm",
    "web",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
