[package]
name = "tessera-web"
description = "Tessera web UI — Leptos CSR app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tessera-core = { path = "../crates/tessera-core" }
leptos = { version = "0.7", features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Storage", "HtmlElement", "HtmlDivElement", "Document"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[lib]
crate-type = ["cdylib", "rlib"]
