[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
tessera-core = { path = "../crates/tessera-core" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
csv = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.22"
regex = "1"
chrono = "0.4"
sha2 = "0.10"
