[package]
name = "tessera-cli"
description = "CLI interface for the Tessera reciprocal museum coverage optimizer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tessera"
path = "src/main.rs"

[dependencies]
tessera-core = { path = "../tessera-core" }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
