[package]
name = "tessera-core"
description = "Domain model, rules engine, and optimizer for reciprocal museum membership coverage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ascent = "0.8"

[dev-dependencies]
serde_json = { workspace = true }
